Overflow resolved, resolving

--- a/assets/style/_subscribe.scss
+++ b/assets/style/_subscribe.scss
@@ -10,12 +10,12 @@
   }
 
   .subscribe1 {
-    left: 30%;
+    left: 25%;
     top: 2rem;
   }
 
   .subscribe2 {
-    left: 45%;
+    left: 40%;
     top: 3.5rem;
   }
 
@@ -30,8 +30,3 @@
   min-height: 200px;
 }
 
-.newsletter-bottom {
-  button {
-    max-width: 300px;
-  }
-}
